--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^11.0.3",
     "swiper": "^11.2.2"
   },
